# pydantic-meta

./: .gitignore  README.md  pyproject.toml
pydantic_meta/: _validators.py  optional.py  partial.py  pick.py  required.py
tests/: __init__.py  test_ok.py  test_partial.py  test_pick.py  test_required.py
tests/pick/: test_class_attributes.py  test_config.py  test_together.py
