[tool.poetry]
name = "pydantic-meta"
version = "0.3.1"
description = ""
authors = ["VitailOG <vzaharkiv28@gmail.com>"]
readme = "README.md"
packages = [{include = "pydantic_meta"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
